Sessão de videos "terminada"

--- a/Project 08 - Youtube clone/index.html
+++ b/Project 08 - Youtube clone/index.html
@@ -71,7 +71,160 @@
             </div>
         </nav>
         <div class="videos">
-            
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                </div>
+                <div class="infos">
+                    <img src="assets/thumbnails/ash.jpeg" alt="">
+                    <div class="text">
+                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
+                        <span class="youtuber">Ash ketchup</span> </br>
+                        <span class="views">10 bi de visualizações</span> </br>
+                        <span class="horas">Há 5 horas</span>
+                    </div>
+                    <div class="options">
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                    </div>
+                </div>
+            </div>
+   
         </div>
     </section>
 </body>
