--- a/Project 08 - Youtube clone/index.html
+++ b/Project 08 - Youtube clone/index.html
@@ -74,6 +74,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -91,6 +94,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -108,6 +114,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -125,6 +134,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -142,6 +154,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -159,6 +174,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -176,6 +194,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -193,6 +214,9 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
+                    <div class="duration">
+                        <span>24:00:00</span>
+                    </div>
                 </div>
                 <div class="infos">
                     <img src="assets/thumbnails/ash.jpeg" alt="">
@@ -207,75 +231,6 @@
                     </div>
                 </div>
             </div>
-            <div class="video">
-                <div class="thumbnail">
-                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
-                </div>
-                <div class="infos">
-                    <img src="assets/thumbnails/ash.jpeg" alt="">
-                    <div class="text">
-                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
-                        <span class="youtuber">Ash ketchup</span> </br>
-                        <span class="views">10 bi de visualizações</span> </br>
-                        <span class="horas">Há 5 horas</span>
-                    </div>
-                    <div class="options">
-                        <span><i class="fas fa-ellipsis-v"></i></span>
-                    </div>
-                </div>
-            </div>
-            <div class="video">
-                <div class="thumbnail">
-                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
-                </div>
-                <div class="infos">
-                    <img src="assets/thumbnails/ash.jpeg" alt="">
-                    <div class="text">
-                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
-                        <span class="youtuber">Ash ketchup</span> </br>
-                        <span class="views">10 bi de visualizações</span> </br>
-                        <span class="horas">Há 5 horas</span>
-                    </div>
-                    <div class="options">
-                        <span><i class="fas fa-ellipsis-v"></i></span>
-                    </div>
-                </div>
-            </div>
-            <div class="video">
-                <div class="thumbnail">
-                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
-                </div>
-                <div class="infos">
-                    <img src="assets/thumbnails/ash.jpeg" alt="">
-                    <div class="text">
-                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
-                        <span class="youtuber">Ash ketchup</span> </br>
-                        <span class="views">10 bi de visualizações</span> </br>
-                        <span class="horas">Há 5 horas</span>
-                    </div>
-                    <div class="options">
-                        <span><i class="fas fa-ellipsis-v"></i></span>
-                    </div>
-                </div>
-            </div>
-            <div class="video">
-                <div class="thumbnail">
-                    <img src="assets/thumbnails/pexels-mentatdgt-1049622.jpg" alt="thumbnail">
-                </div>
-                <div class="infos">
-                    <img src="assets/thumbnails/ash.jpeg" alt="">
-                    <div class="text">
-                        <h1>Pikachu gigante fazendo uma dança peculiar</h1>
-                        <span class="youtuber">Ash ketchup</span> </br>
-                        <span class="views">10 bi de visualizações</span> </br>
-                        <span class="horas">Há 5 horas</span>
-                    </div>
-                    <div class="options">
-                        <span><i class="fas fa-ellipsis-v"></i></span>
-                    </div>
-                </div>
-            </div>
-   
         </div>
     </section>
 </body>
