"Finish" the top bar

--- a/Project 09 - Umbler clone/index.html
+++ b/Project 09 - Umbler clone/index.html
@@ -10,6 +10,16 @@
     <title>Umbler</title>
 </head>
 <body>
-    
+    <header>
+        <img src="assets/icons/img-umbler-favicon-i.svg" alt="Umbler">
+        <div>
+            <div>
+                <img src="assets/icons/img-umblercoin-gold.svg" alt="Coin">
+                <span>R$ 100,00</span>
+            </div>
+            <button>Adicionar pagamento</button>
+            <span class="user">B</span>
+        </div>
+    </header>
 </body>
 </html>
