--- a/Project 09 - Umbler clone/index.html
+++ b/Project 09 - Umbler clone/index.html
@@ -21,5 +21,29 @@
             <span class="user">B</span>
         </div>
     </header>
+    <section>
+        <div class="domains">
+            <div class="top">
+                <h1>Domínios</h1>
+                <span>--------------------</span>
+                <button>+ Novo</button>
+            </div>
+            <div class="myDomains">
+                <h1>Meus</h1>
+                <div>
+                    <span><i class="fas fa-chevron-down"></i>umblerclone.com</span>
+                    <svg class="img-svg" viewBox="0 0 24 24"><path fill="#F26B7A" d="M15.2 15.9L12 12.7c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l1.3 1.3H3.6c-.6 0-1 .5-1 1 0 .6.5 1 1 1h8.5L10.6 19c-.4.4-.4 1 0 1.4.2.2.5.3.7.3.3 0 .5-.1.7-.3l3.2-3.2c.4-.3.4-.9 0-1.3z"></path><path fill="#557cf2" d="M22.5 9.8c-.4-3.3-3.1-6.1-6.4-6.5-3.4-.4-6.5 1.4-7.8 4.4-1.2-.4-2.7-.3-4 .4-1.4.7-2.4 2-2.7 3.5 0 .1-.1.6-.1.7v.2c0 .6.5 1.1 1.1 1.1.5 0 1-.4 1.1-.9.1-1.7 1.4-3 3.1-3 .6 0 1.2.2 1.7.5.3.2.7.2 1 .1.3-.3.5-.6.6-1 .1-.9.4-1.9 1.1-2.5 4.4-3.5 9.2-.4 9.2 3.8 0 1.8-1 3.5-2.4 4.4-.3.2-.3.5-.3.8 0 .6.5 1.1 1.1 1.1.3 0 .6-.2.8-.3 2-1.5 3.2-4 2.9-6.8z"></path></svg>
+                </div>
+                <div class="domainConfigs">
+                    <div class="myDomainsIcons"><span>Site</span></div>
+                    <div class="myDomainsIcons"><span><button>Criar Email</button></span></div>
+                    <div class="myDomainsIcons"><span>Domínio</span></div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            
+        </div>
+    </section>
 </body>
 </html>
