--- a/Project 09 - Umbler clone/index.html
+++ b/Project 09 - Umbler clone/index.html
@@ -42,8 +42,59 @@
             </div>
         </div>
         <div class="container">
-            
-        </div>
+            <div class="hostConfigs">
+                <div class="firstLine">
+                    <div class="nodeLogo">
+                        <img src="assets/icons/node-js.svg" alt="Node">
+                        <span>Node.js v10 <i class="fas fa-chevron-down"></i></span>
+                    </div>
+                    <div class="links">
+                        <span>brenosantos.com <i class="fas fa-external-link-alt"></i></span>
+                        <span>http://brenosantos-com.umbler.net <i class="fas fa-external-link-alt"></i></span>
+                    </div>
+                    <div class="serverState">
+                        <div class="box">
+                            <div class="text">
+                                <h2>0%</h2>
+                                <h2>HD</h2>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="text">
+                                <h2>0%</h2>
+                                <h2>RAM</h2>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="text">
+                                <h2>0%</h2>
+                                <h2>CPU</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="secondLine">
+                    <div class="edit">
+                        <span>Editar instância</span>
+                    </div>
+                    <div class="controls">
+                        <button><i class="fas fa-play"></i></button>
+                        <button><i class="fas fa-undo-alt"></i></button>
+                        <button><i class="fas fa-pause"></i></button>
+                    </div>
+                    <div class="share">
+                        <span><i class="fas fa-user-plus"></i> Compartilhar acesso</span>
+                    </div>
+                </div>
+                <div class="thirdLine">
+                    <span>Deploy</span>
+                    <span>Arquivos <i class="fas fa-chevron-down"></i></span>
+                    <span>Banco de dados</span>
+                    <span>Configurações <i class="fas fa-chevron-down"></i></span>
+                    <span>Logs</span>
+                    <span>Add-ons</span>
+                </div>
+            </div>
     </section>
 </body>
 </html>
