--- a/Project 09 - Umbler clone/index.html
+++ b/Project 09 - Umbler clone/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="secondLine">
                     <div class="edit">
-                        <span>Editar instância</span>
+                        <span><i class="fas fa-sliders-h"></i> Editar instância</span>
                     </div>
                     <div class="controls">
                         <button><i class="fas fa-play"></i></button>
