--- a/Project 09 - Umbler clone/index.html
+++ b/Project 09 - Umbler clone/index.html
@@ -49,8 +49,8 @@
                         <span>Node.js v10 <i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="links">
-                        <span>brenosantos.com <i class="fas fa-external-link-alt"></i></span>
-                        <span>http://brenosantos-com.umbler.net <i class="fas fa-external-link-alt"></i></span>
+                        <span>umblerclone.com <i class="fas fa-external-link-alt"></i></span>
+                        <span>http://umblerclone-com.umbler.net <i class="fas fa-external-link-alt"></i></span>
                     </div>
                     <div class="serverState">
                         <div class="box">
