--- a/Project 09 - Umbler clone/index.html
+++ b/Project 09 - Umbler clone/index.html
@@ -95,6 +95,43 @@
                     <span>Add-ons</span>
                 </div>
             </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="assets/deploy/ftps.svg" alt="FTPS">
+                    <h1>FTPS</h1>
+                    <p>
+                        As boas e velhas contas de FTP, só que com segurança.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="assets/deploy/git-remote.svg" alt="FTPS">
+                    <h1>Git Remote</h1>
+                    <p>
+                        Utilize uma <span>git-url</span> para publicar seu site com apenas um push.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="assets/deploy/git-ssh.svg" alt="FTPS">
+                    <h1>Git via SSH</h1>
+                    <p>
+                        Execute comandos <span>git</span>  dentro da pasta do site via SSH.    
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="assets/deploy/goodbye-host.svg" alt="FTPS">
+                    <h1>Goodbye.host <i class="fas fa-external-link-alt"></i></h1>
+                    <p>
+                        Copie seu site automaticamente da hospedagem atual.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="assets/deploy/file-upload.svg" alt="FTPS">
+                    <h1>Arquivos</h1>
+                    <p>
+                        Envie os arquivos do seu computador pelo painel da Umbler.
+                    </p>
+                </div>
+            </div>
     </section>
 </body>
 </html>
