Finish the menu

--- a/Project 10 - Telegram Clone/index.html
+++ b/Project 10 - Telegram Clone/index.html
@@ -9,6 +9,39 @@
     <title>Telegram</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a><i class="fas fa-bars"></i></a>
+            </li>
+            <li class="menuSelectedIcon">
+                <a><i class="fas fa-comments menuSelectedIcon"></i></a>
+                <span class="menuSelectedText">All Chats</span>
+            </li>
+            <li>
+                <a><i class="far fa-folder"></i></a>
+                <span>All Chats</span>
+            </li>
+            <li>
+                <a><i class="far fa-folder"></i></a>
+                <span>Teste</span>
+            </li>
+            <li>
+                <a><i class="far fa-folder"></i></a>
+                <span>Teste</span>
+            </li>
+            <li>
+                <a><i class="far fa-folder"></i></a>
+                <span>Teste</span>
+            </li>
+            <li>
+                <a><i class="fas fa-sliders-h"></i></a>
+                <span>Edit</span>
+            </li>
+        </ul>
+    </nav>
+    <section class="chats-container">
+
+    </section>
 </body>
 </html>
