--- a/Project 10 - Telegram Clone/index.html
+++ b/Project 10 - Telegram Clone/index.html
@@ -40,8 +40,120 @@
             </li>
         </ul>
     </nav>
-    <section class="chats-container">
-
+    <section class="chatsList">
+        <input type="text" placeholder="Search">
+        <div class="chats">
+            <div class="chat">
+                <img src="assets/pai.png" alt="Entei">
+                <div class="nameAndText">
+                    <h1>Pai</h1>
+                    <span>🦁🦁🦁</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>78</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/pikachu.jpg" alt="Pikachu">
+                <div class="nameAndText">
+                    <h1>Pikachu</h1>
+                    <span>🐭⚡⚡</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>12</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/charmander.png" alt="Charmander">
+                <div class="nameAndText">
+                    <h1>Charmander</h1>
+                    <span>🔥🔥🦎</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>12</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/squirtle.jpeg" alt="squirtle">
+                <div class="nameAndText">
+                    <h1>squirtle</h1>
+                    <span>🐢💧</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>12</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/bulbasaur.png" alt="Bulbasaur">
+                <div class="nameAndText">
+                    <h1>Bulbasaur</h1>
+                    <span>🐢🍃</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>12</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/mew.png" alt="Mew">
+                <div class="nameAndText">
+                    <h1>Mew</h1>
+                    <span>🐱🪒</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>12</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/greninja.png" alt="Mew">
+                <div class="nameAndText">
+                    <h1>greninja</h1>
+                    <span>🐸🥷</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>18</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/meowth.png" alt="Mew">
+                <div class="nameAndText">
+                    <h1>Meowth</h1>
+                    <span>🐱🪙</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>18</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/rayquaza.png" alt="Mew">
+                <div class="nameAndText">
+                    <h1>Rayquaza</h1>
+                    <span>🐉⚡</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>18</span>
+                </div>
+            </div>
+            <div class="chat">
+                <img src="assets/arceus.png" alt="Mew">
+                <div class="nameAndText">
+                    <h1>Arceus</h1>
+                    <span>🙏</span>
+                </div>
+                <div class="hour">
+                    <span>18:00</span>
+                    <span>18</span>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
