--- a/Project 10 - Telegram Clone/index.html
+++ b/Project 10 - Telegram Clone/index.html
@@ -155,5 +155,10 @@
             </div>
         </div>
     </section>
+    <section class="message">
+        <header>
+            
+        </header>
+    </section>
 </body>
 </html>
