Hour position correction

--- a/Project 10 - Telegram Clone/index.html
+++ b/Project 10 - Telegram Clone/index.html
@@ -157,7 +157,7 @@
     </section>
     <section class="message">
         <header>
-            
+            <h1>Pikachu</h1>
         </header>
     </section>
 </body>
