Finish the header

--- a/Project 10 - Telegram Clone/index.html
+++ b/Project 10 - Telegram Clone/index.html
@@ -158,6 +158,11 @@
     <section class="message">
         <header>
             <h1>Pikachu</h1>
+            <div class="icons">
+                <span><i class="fas  fa-search"></i></span>
+                <span><i class="fas  fa-columns"></i></span>
+                <span><i class="fas  fa-ellipsis-v"></i></span>
+            </div>
         </header>
     </section>
 </body>
