finish the message area

--- a/Project 10 - Telegram Clone/index.html
+++ b/Project 10 - Telegram Clone/index.html
@@ -164,6 +164,15 @@
                 <span><i class="fas  fa-ellipsis-v"></i></span>
             </div>
         </header>
+        <div class="center">
+
+        </div>
+        <div class="sendMessage">
+            <span><i class="fas fa-paperclip"></i></span>
+            <input type="text" placeholder="Write a message">
+            <span><i class="fas fa-smile-beam"></i></span>
+            <span><i class="fas fa-location-arrow"></i></span>
+        </div>
     </section>
 </body>
 </html>
