--- a/Project 11 - Random Things/heart loading /index.html
+++ b/Project 11 - Random Things/heart loading /index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heart Loading</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="loader"></div>
+    <div class="loader">
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
