Finish the project

--- a/Project 11 - Random Things/masked emoji/index.html
+++ b/Project 11 - Random Things/masked emoji/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="emoji">
-        <div class="mask"></div>
+        <div class="mask">
+            <div class="details"></div>
+        </div>
     </div>
 </body>
 </html>
