--- a/Project 13 - Gameboy/index.html
+++ b/Project 13 - Gameboy/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="gameboy">
         <div class="top-bar"></div>
+        <div class="screen">
+            <div class="glass"></div>
+        </div>
     </div>
 </body>
 </html>
