--- a/Project 13 - Gameboy/index.html
+++ b/Project 13 - Gameboy/index.html
@@ -11,6 +11,7 @@
     <div class="gameboy">
         <div class="top-bar"></div>
         <div class="screen">
+            <span></span>
             <div class="glass"></div>
         </div>
     </div>
