create direction buttons

--- a/Project 13 - Gameboy/index.html
+++ b/Project 13 - Gameboy/index.html
@@ -14,6 +14,16 @@
             <span></span>
             <div class="glass"></div>
         </div>
+        <div class="arrows">
+            <div class="top-arrow"></div>
+            <div class="right-arrow"></div>
+            <div class="bottom-arrow"></div>
+            <div class="left-arrow"></div>
+        </div>
+        <div class="buttons">
+            <div></div>
+            <div></div>
+        </div>
     </div>
 </body>
 </html>
