--- a/Project 13 - Gameboy/index.html
+++ b/Project 13 - Gameboy/index.html
@@ -14,16 +14,19 @@
             <span></span>
             <div class="glass"></div>
         </div>
-        <div class="arrows">
-            <div class="top-arrow"></div>
-            <div class="right-arrow"></div>
-            <div class="bottom-arrow"></div>
-            <div class="left-arrow"></div>
+        <div class="controls">
+            <div class="arrows">
+                <div class="top-arrow"></div>
+                <div class="right-arrow"></div>
+                <div class="bottom-arrow"></div>
+                <div class="left-arrow"></div>
+            </div>
+            <div class="buttons">
+                <button></button>
+                <button></button>
+            </div>
         </div>
-        <div class="buttons">
-            <div></div>
-            <div></div>
-        </div>
+        
     </div>
 </body>
 </html>
