create the start and reset buttons

--- a/Project 13 - Gameboy/index.html
+++ b/Project 13 - Gameboy/index.html
@@ -26,7 +26,7 @@
                 <button></button>
             </div>
         </div>
-        
+        <div class="start-reset"></div>
     </div>
 </body>
 </html>
