--- a/Project 13 - Gameboy/index.html
+++ b/Project 13 - Gameboy/index.html
@@ -27,6 +27,13 @@
             </div>
         </div>
         <div class="start-reset"></div>
+        <div class="dots">
+            <span>•••••</span><br>
+            <span>•••••••</span><br>
+            <span>•••••</span><br>
+            <span>••••••</span><br>
+            <span>••••</span>
+        </div>
     </div>
 </body>
 </html>
