create the header

--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -17,9 +17,16 @@
   </style>
 </head>
 <body>
-  About
-  Discover
-  Get Started
+  <header>
+    <menu>
+      <img src="assets/images/logo.svg" alt="Crowdfund">
+      <ul>
+        <li>About</li>
+        <li>Discover</li>
+        <li>Get Started</li>
+      </ul>
+    </menu>
+  </header>
 
   Mastercraft Bamboo Monitor Riser
   A beautiful & handcrafted monitor stand to reduce neck and eye strain.
