create the contributions card

--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -38,17 +38,19 @@
       </div>
     </div>
     <div class="contributions">
-      <div>
-        <span>$89,914</span>
-        <span>of $100,000 backed</span>
-      </div>
-      <div>
-        <span>5,007 </span>
-        <span>total backers</span>
-      </div>
-      <div>
-        <span>56</span>
-        <span>days left</span>
+      <div class="values">
+        <div>
+          <span>$89,914</span>
+          <span>of $100,000 backed</span>
+        </div>
+        <div>
+          <span>5,007 </span>
+          <span>total backers</span>
+        </div>
+        <div>
+          <span>56</span>
+          <span>days left</span>
+        </div>
       </div>
       
       <div class="progress"></div>
