create the contributions cards

--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -69,28 +69,52 @@
 
       <div class="reward-cards">
         <div class="card">
-          Bamboo Stand
-          Pledge $25 or more
-          You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
-          you’ll be added to a special Backer member list.
-          101 left
-          Select Reward
+          <div class="top">
+            <h1>Bamboo Stand</h1>
+            <span>Pledge $25 or more</span>
+          </div>
+          <div class="middle">
+            <p>
+              You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+              you’ll be added to a special Backer member list.
+            </p>
+          </div>
+          <div class="bottom">
+            <h2>101 <span>left</span></h2>
+            <button>Select Reward</button>
+          </div>
         </div>
         <div class="card">
-          Black Edition Stand
-          Pledge $75 or more
-          You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
-          member list. Shipping is included.
-          64 left
-          Select Reward
+          <div class="top">
+            <h1>Black Edition Stand</h1>
+            <span>Pledge $75 or more</span>
+          </div>
+          <div class="middle">
+            <p>
+              You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
+              member list. Shipping is included.
+            </p>
+          </div>
+          <div class="bottom">
+            <h3>64 <span>left</span></h3>
+            <button>Select Reward</button>
+          </div>
         </div>
         <div class="card">
-          Mahogany Special Edition
-          Pledge $200 or more
-          You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
-          to our Backer member list. Shipping is included.
-          0 left
-          Out of Stock
+          <div class="top">
+            <h1>Mahogany Special Edition</h1>
+            <span>Pledge $200 or more</span>
+          </div>
+          <div class="middle">
+            <p>
+              You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+              to our Backer member list. Shipping is included.  
+            </p>
+          </div>
+          <div class="bottom">
+            <h3>0 <span>left</span></h3>
+            <button>Out of Stock</button>
+          </div>
         </div>
       </div>
     </div>
