--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -119,60 +119,96 @@
       </div>
     </div>
   </section>
-  <!-- Selection modal start -->
-
-  Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer, 
-  you will be signed up to receive product updates via email.
-
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $25
-  Continue
-  <!-- Selected pledge end -->
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $75
-  Continue
-  <!-- Selected pledge end -->
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left
-
-  <!-- Selected pledge  start -->
-  Enter your pledge
-  $200
-  Continue
-  <!-- Selected pledge end -->
-
-  <!-- Selection modal end -->
-
-  <!-- Success modal start -->
-
-  Thanks for your support!
-  Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-  an email once our campaign is completed.
-  Got it!
-
-  <!-- Success modal end -->
+  <section class="modal">
+    <span><i class="fas fa-times"></i></span>
+    <h1>Back this project</h1>
+    <span>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</span>
+    <div class="cards">
+      <div class="card">
+        <div class="top">
+          <input type="checkbox" name="" id="">
+          <h3>Pledge with no reward</h3>
+        </div>
+        <div class="middle">
+          <p>
+            Choose to support us without a reward if you simply believe in our project. As a backer, 
+            you will be signed up to receive product updates via email.
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="top">
+          <input type="checkbox" name="" id="">
+          <h3>Bamboo Stand</h3>
+          <span>Pledge $25 or more</span>
+          <h3>101 <span>left</span></h3>
+        </div>
+        <div class="middle">
+          <p>
+            You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
+            you’ll be added to a special Backer member list.
+          </p>
+        </div>
+        <div class="bottom">
+          <span>
+            Enter your pledge
+          </span>
+          <span>
+            <span>$</span>
+            25
+          </span>
+          <button>Continue</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="top">
+          <input type="checkbox" name="" id="">
+          <h3>Black Edition Stand</h3>
+          <span>Pledge $75 or more</span>
+          <h3>64 <span>left</span></h3>
+        </div>
+        <div class="middle">
+          <p>
+            You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+            member list. Shipping is included.
+          </p>
+        </div>
+        <div class="bottom">
+          <span>
+            Enter your pledge
+          </span>
+          <span>
+            <span>$</span>
+            75
+          </span>
+          <button>Continue</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="top">
+          <input type="checkbox" name="" id="">
+          <h3>Mahogany Special Edition</h3>
+          <span>Pledge $200 or more</span>
+          <h3>0 <span>left</span></h3>
+        </div>
+        <div class="middle">
+          <p>
+            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+            to our Backer member list. Shipping is included.
+          </p>
+        </div>
+        <div class="bottom">
+          <span>
+            Enter your pledge
+          </span>
+          <span>
+            <span>$</span>
+            200
+          </span>
+          <button>Continue</button>
+        </div>
+      </div>
+    </div>
+  </section>  
 </body>
 </html>
