change input checkbox to radio

--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -123,10 +123,10 @@
     <span><i class="fas fa-times"></i></span>
     <h1>Back this project</h1>
     <span>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</span>
-    <div class="cards">
+    <form class="cards">
       <div class="card">
         <div class="top">
-          <input type="checkbox" name="" id="">
+          <input type="radio" name="reward" id="pledge">
           <h3>Pledge with no reward</h3>
         </div>
         <div class="middle">
@@ -138,7 +138,7 @@
       </div>
       <div class="card">
         <div class="top">
-          <input type="checkbox" name="" id="">
+          <input type="radio" name="reward" id="bamboo">
           <h3>Bamboo Stand</h3>
           <span>Pledge $25 or more</span>
           <h3>101 <span>left</span></h3>
@@ -162,7 +162,7 @@
       </div>
       <div class="card">
         <div class="top">
-          <input type="checkbox" name="" id="">
+          <input type="radio" name="reward" id="black">
           <h3>Black Edition Stand</h3>
           <span>Pledge $75 or more</span>
           <h3>64 <span>left</span></h3>
@@ -186,7 +186,7 @@
       </div>
       <div class="card">
         <div class="top">
-          <input type="checkbox" name="" id="">
+          <input type="radio" name="reward" id="mahogany">
           <h3>Mahogany Special Edition</h3>
           <span>Pledge $200 or more</span>
           <h3>0 <span>left</span></h3>
@@ -208,7 +208,7 @@
           <button>Continue</button>
         </div>
       </div>
-    </div>
+    </form>
   </section>  
 </body>
 </html>
