--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -126,43 +126,47 @@
       <span>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</span>
       <div class="cards">
         <div class="card">
-          <div>
-            <input type="radio" name="reward" id="pledge">
-          </div>
-          <div>
-            <div class="top">
-              <h3>Pledge with no reward</h3>
+          <section>
+            <div>
+              <input type="radio" name="reward" id="pledge">
             </div>
-            <div class="middle">
-              <p>
-                Choose to support us without a reward if you simply believe in our project. As a backer, 
-                you will be signed up to receive product updates via email.
-              </p>
+            <div>
+              <div class="top">
+                <h3>Pledge with no reward</h3>
+              </div>
+              <div class="middle">
+                <p>
+                  Choose to support us without a reward if you simply believe in our project. As a backer, 
+                  you will be signed up to receive product updates via email.
+                </p>
+              </div>
             </div>
-          </div>
+          </section>
         </div>
         <div class="card">
-          <div>
-            <input type="radio" name="reward" id="bamboo">
-          </div>
-          <div>
-            <div class="top">
-              <h3>Bamboo Stand</h3>
-              <span>Pledge $25 or more</span>
-              <h3>101 <span>left</span></h3>
+          <section>
+            <div>
+              <input type="radio" name="reward" id="bamboo">
             </div>
-            <div class="middle">
-              <p>
-                You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-                you’ll be added to a special Backer member list.
-              </p>
-            </div>
+            <div>
+              <div class="top">
+                <h3>Bamboo Stand</h3>
+                <span>Pledge $25 or more</span>
+                <h3>101 <span>left</span></h3>
+              </div>
+              <div class="middle">
+                <p>
+                  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
+                  you’ll be added to a special Backer member list.
+                </p>
+              </div>
+          </section>
             <div class="bottom">
               <span>
                 Enter your pledge
               </span>
               <span>
-                <span>$</span>
+                <i>$</i>
                 25
               </span>
               <button>Continue</button>
@@ -170,27 +174,29 @@
           </div>
         </div>
         <div class="card">
-          <div>
-            <input type="radio" name="reward" id="black">
-          </div>
-          <div>
-            <div class="top">
-              <h3>Black Edition Stand</h3>
-              <span>Pledge $75 or more</span>
-              <h3>64 <span>left</span></h3>
+          <section>
+            <div>
+              <input type="radio" name="reward" id="black">
             </div>
-            <div class="middle">
-              <p>
-                You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-                member list. Shipping is included.
-              </p>
-            </div>
+            <div>
+              <div class="top">
+                <h3>Black Edition Stand</h3>
+                <span>Pledge $75 or more</span>
+                <h3>64 <span>left</span></h3>
+              </div>
+              <div class="middle">
+                <p>
+                  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+                  member list. Shipping is included.
+                </p>
+              </div>
+          </section>
             <div class="bottom">
               <span>
                 Enter your pledge
               </span>
               <span>
-                <span>$</span>
+                <i>$</i>
                 75
               </span>
               <button>Continue</button>
@@ -198,27 +204,29 @@
           </div>
         </div>
         <div class="card">
-          <div>
-            <input type="radio" name="reward" id="mahogany">
-          </div>
-          <div>
-            <div class="top">
-              <h3>Mahogany Special Edition</h3>
-              <span>Pledge $200 or more</span>
-              <h3>0 <span>left</span></h3>
+          <section>
+            <div>
+              <input type="radio" name="reward" id="mahogany">
             </div>
-            <div class="middle">
-              <p>
-                You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-                to our Backer member list. Shipping is included.
-              </p>
-            </div>
+            <div>
+              <div class="top">
+                <h3>Mahogany Special Edition</h3>
+                <span>Pledge $200 or more</span>
+                <h3>0 <span>left</span></h3>
+              </div>
+              <div class="middle">
+                <p>
+                  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+                  to our Backer member list. Shipping is included.
+                </p>
+              </div>
+          </section>
             <div class="bottom">
               <span>
                 Enter your pledge
               </span>
               <span>
-                <span>$</span>
+                <i>$</i>
                 200
               </span>
               <button>Continue</button>
