finish the design

--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -227,6 +227,18 @@
     </div>
   </section>  
 
+  <section class="background">
+    <div class="success-modal">
+      <img src="assets/images/icon-check.svg" alt="">
+      <h1>Thanks for your support!</h1>
+      <p>
+        Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
+        an email once our campaign is completed.
+        Got it!
+      </p>
+      <button>Got it!</button>
+    </div>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
