finish the project

--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -169,7 +169,7 @@
                 <i>$</i>
                 25
               </span>
-              <button>Continue</button>
+              <button onclick="showSuccess()">Continue</button>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
                 <i>$</i>
                 75
               </span>
-              <button>Continue</button>
+              <button onclick="showSuccess()">Continue</button>
             </div>
           </div>
           <div class="card disable">
@@ -227,7 +227,7 @@
     </div>
   </section>  
 
-  <section class="background">
+  <section class="background2">
     <div class="success-modal">
       <img src="assets/images/icon-check.svg" alt="">
       <h1>Thanks for your support!</h1>
@@ -236,7 +236,7 @@
         an email once our campaign is completed.
         Got it!
       </p>
-      <button>Got it!</button>
+      <button onclick="exit(this)">Got it!</button>
     </div>
   </section>
   <script src="script.js"></script>
