--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -125,7 +125,7 @@
       <h1>Back this project</h1>
       <span>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</span>
       <div class="cards">
-        <div class="card">
+        <div class="card" onclick="check(this)">
           <section>
             <div>
               <input onchange="showPledge(this)" type="radio" name="reward" id="pledge">
@@ -143,7 +143,7 @@
             </div>
           </section>
         </div>
-        <div class="card">
+        <div class="card" onclick="check(this)">
           <section>
             <div>
               <input onchange="showPledge(this)" type="radio" name="reward" checked id="bamboo">
@@ -173,7 +173,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="check(this)">
           <section>
             <div>
               <input onchange="showPledge(this)" type="radio" name="reward" id="black">
