--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -21,6 +21,7 @@
     <menu>
       <img src="assets/images/logo.svg" alt="Crowdfund">
       <ul>
+        <span></span>
         <li>About</li>
         <li>Discover</li>
         <li>Get Started</li>
