create the menu animation

--- a/Project 14 - Crowdfunding page/index.html
+++ b/Project 14 - Crowdfunding page/index.html
@@ -20,8 +20,8 @@
   <header>
     <menu>
       <img src="assets/images/logo.svg" alt="Crowdfund">
-      <ul>
-        <span></span>
+      <span class="close-btn" onclick="showMenu(this)"></span>
+      <ul class="menu menu-hidden">
         <li>About</li>
         <li>Discover</li>
         <li>Get Started</li>
