--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -15,11 +15,17 @@
   </style>
 </head>
 <body>
+  <header>
+    <div class="right-side">
+      <h1>Social Media Dashboard</h1>
+      <h2>Total Followers: 23,004</h2>
+    </div>
+    <div class="left-side">
+      <span>Dark Mode</span>
+      <input type="checkbox" name="toggleMode" id="toggleMode">
+    </div>
+  </header>
 
-  Social Media Dashboard
-  Total Followers: 23,004
-
-  Dark Mode
 
   
 
