--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -15,39 +15,81 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="right-side">
-      <h1>Social Media Dashboard</h1>
-      <h2>Total Followers: 23,004</h2>
-    </div>
-    <div class="left-side">
-      <span>Dark Mode</span>
-      <input type="checkbox" name="toggleMode" id="toggleMode">
-    </div>
-  </header>
-
+  <div class="container">
+    <header>
+      <div class="right-side">
+        <h1>Social Media Dashboard</h1>
+        <h2>Total Followers: 23,004</h2>
+      </div>
+      <div class="left-side">
+        <span>Dark Mode</span>
+        <input type="checkbox" name="toggleMode" id="toggleMode">
+      </div>
+    </header>
+    <section class="socialMediaCards">
+      <div class="card fb">
+        <div class="tag">
+          <img src="assets/images/icon-facebook.svg" alt="icon-facebook">
+          <span>@nathanf</span>
+        </div>
+        <div class="followers">
+          <h1>1987</h1>
+          <span>Followers</span>
+        </div>
+        <div class="today profit">
+          <span class="icon"></span>
+          <span>12 Today</span>
+        </div>
+      </div>
+      <div class="card tt">
+        <div class="tag">
+          <img src="assets/images/icon-twitter.svg" alt="icon-twitter">
+          <span>@nathanf</span>
+        </div>
+        <div class="followers">
+          <h1>1044</h1>
+          <span>Followers</span>
+        </div>
+        <div class="today profit">
+          <span class="icon"></span>
+          <span>99 Today</span>
+        </div>
+      </div>
+      <div class="card insta">
+        <div class="tag">
+          <img src="assets/images/icon-instagram.svg" alt="icon-instagram">
+          <span>@realnathanf</span>
+        </div>
+        <div class="followers">
+          <h1>11k</h1>
+          <span>Followers</span>
+        </div>
+        <div class="today profit">
+          <span class="icon"></span>
+          <span>1099 Today</span>
+        </div>
+      </div>
+      <div class="card yt">
+        <div class="tag">
+          <img src="assets/images/icon-youtube.svg" alt="icon-youtube">
+          <span>Nathan F.</span>
+        </div>
+        <div class="followers">
+          <h1>8239</h1>
+          <span>Subscribersx</span>
+        </div>
+        <div class="today profit">
+          <span class="icon"></span>
+          <span>144 Today</span>
+        </div>
+      </div>
+    </section>
+  </div>
 
   
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
+  
+  
+  
 
 
 
